Dependency update improvements
Adds configuration to use dependabot to get updates for Go, Docker, and
GitHub Action dependencies. Groups k8s.io updates since those should
usually be taken as a set. Adds labels to make sure tests are run
automatically.

Also pins third party actions to a specific SHA.

Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,29 @@
 version: 2
 updates:
-  - package-ecosystem: "gomod" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "gomod"
+    directory: "/"
     schedule:
       interval: "weekly"
+    groups:
+      k8s-deps:
+        patterns:
+          - "*k8s.io*"
+    labels:
+      - "area/dependency"
+      - "ok-to-test"
 
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      # Check for updates to GitHub Actions every week
       interval: "weekly"
+    labels:
+      - "area/dependency"
+      - "ok-to-test"
+
+  - package-ecosystem: "docker"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    labels:
+      - "area/dependency"
+      - "ok-to-test"
