--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,10 +23,10 @@ jobs:
         go-version: [1.25.x]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/setup-go@v6
+    - uses: actions/setup-go@7a3fe6cf4cb3a834922a1244abfce67bcef6a0c5 # v6
       with:
         go-version: ${{ matrix.go-version }}
-    - uses: actions/checkout@v6
+    - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
     - run: sudo make test
     - run: make lint
 
